--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,12 +1,20 @@
 @use 'variables' as *;
 
+html,
 body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
 .App {
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
+  overflow: hidden;
 
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
